# ffmpeg_sample

./: CMakeLists.txt  README.MD  ffmpeg_pull_decode_yuv.cpp  main.cpp
common/inc/: drawing.h  error.h  freetype_helper.h  type.h  utils.h
common/src/: freetype_helper.cpp  utils.cpp
inc/: FFmpegDecoder.h  FFmpegEncoded.h
nvidia/NvDecoder/: NvDecoder.cpp  NvDecoder.h
nvidia/Utils/: Logger.h  NvCodecUtils.h  NvEncoderCLIOptions.h
src/: AppEncDec.cpp  FFmpegDecoder.cpp  FFmpegEncoded.cpp  ffmpeg_pull_decode_yuv.cpp  ffmpeg_push_stream.cpp
